footer zoom, fixed update on checkbox and curve

--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -61,5 +61,5 @@
 }
 
 <Canvas @bind-ActiveNode="ActiveNode" @bind-ActiveEdge="ActiveEdge" ChangeMenu="UpdateChoice"
-        DefaultOptions="DefaultOptions" GraphMode="GraphMode"></Canvas>
-<Footer GraphMode="GraphMode"></Footer>
+        DefaultOptions="DefaultOptions" GraphMode="GraphMode" @bind-Scale="Scale"></Canvas>
+<Footer GraphMode="GraphMode" @bind-Scale="Scale"></Footer>
