--- a/GarphIt.web/Pages/_Host.cshtml
+++ b/GarphIt.web/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="https://localhost:44367/" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <script src="https://kit.fontawesome.com/d8ee45511a.js" crossorigin="anonymous"></script>
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
