--- a/GarphIt.web/Pages/NodeCircle.razor
+++ b/GarphIt.web/Pages/NodeCircle.razor
@@ -6,11 +6,13 @@
     <circle cx="@Node.Xaxis"
             cy="@Node.Yaxis"
             r="@Node.Radius"
-            stroke="black"
+            stroke="@Node.NodeColor"
             stroke-width="2"
             fill="@Node.NodeColor" />
     <text text-anchor="middle"
           fill="@Node.LabelColor"
+          stroke="@Node.NodeColor"
+          stroke-width="1"
           font-size="@(Node.Radius/2)"
           font-family="Verdana"
           x="@Node.Xaxis"
