--- a/GarphIt.web/_Imports.razor
+++ b/GarphIt.web/_Imports.razor
@@ -10,7 +10,8 @@
 @using GraphIt.models
 @using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.Buttons
-@using Syncfusion.Blazor.Popups 
+@using Syncfusion.Blazor.Popups
 @using Syncfusion.Blazor.Navigations
+@using Syncfusion.Blazor.SplitButtons
 @using Syncfusion.Blazor.Navigations.Internal
-@using BlazorPro.BlazorSize 
+@using BlazorPro.BlazorSize
