--- a/GarphIt.web/Pages/AdjMatrix.razor
+++ b/GarphIt.web/Pages/AdjMatrix.razor
@@ -4,31 +4,40 @@
     <DialogTemplates>
         <Header> Adjacency Matrix </Header>
         <Content>
-            <div class="table-responsive">
-                <table class="table table-sm table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Node ID</th>
+            @if (Nodes == null)
+            {
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            }
+            else
+            {
+                <div class="table-responsive">
+                    <table class="table table-sm table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Node ID</th>
+                                @foreach (Node node in Nodes)
+                                {
+                                    <th scope="col">@node.NodeId</th>
+                                }
+                            </tr>
+                        </thead>
+                        <tbody>
                             @foreach (Node node in Nodes)
                             {
-                                <th scope="col">@node.NodeId</th>
+                                <tr>
+                                    <th scope="row">@node.NodeId</th>
+                                    @foreach (Node _ in Nodes)
+                                    {
+                                        <td>Edit Me</td>
+                                    }
+                                </tr>
                             }
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (Node node in Nodes)
-                        {
-                        <tr>
-                            <th scope="row">@node.NodeId</th>
-                            @foreach (Node _ in Nodes)
-                            {
-                                <td>Edit Me</td>
-                            }
-                        </tr>
-                        }
                         </tbody>
                     </table>
-            </div>
+                </div>
+            }
         </Content>
     </DialogTemplates>
     <DialogButtons>
