--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -28,10 +28,10 @@ else if (Rep == Representation.List)
             <Insert @bind-GraphMode="GraphMode"></Insert>
             break;
         case NavChoice.Node:
-            <NodeOptions @bind-DefaultOptions="DefaultOptions"></NodeOptions>
+            <NodeOptions @bind-ActiveNode="ActiveNode" @bind-DefaultOptions="DefaultOptions"></NodeOptions>
             break;
         case NavChoice.Edge:
-            <EdgeOptions @bind-DefaultOptions="DefaultOptions"></EdgeOptions>
+            <EdgeOptions @bind-ActiveEdge="ActiveEdge" @bind-DefaultOptions="DefaultOptions"></EdgeOptions>
             break;
         case NavChoice.Algorithms:
             <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
@@ -43,9 +43,6 @@ else if (Rep == Representation.List)
                     </ul>
                 </div>
             </nav>
-            break;
-        case NavChoice.Selected:
-            <Selected @bind-ActiveEdge="ActiveEdge" @bind-ActiveNode="ActiveNode" DefaultOptions="DefaultOptions"></Selected>
             break;
         case NavChoice.About:
             <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
