--- a/GarphIt.web/Pages/NodeOptions.razor
+++ b/GarphIt.web/Pages/NodeOptions.razor
@@ -1,18 +1,49 @@
 ﻿@inherits NodeOptionsBase
 
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <div class="text-center border-right border-dark">
+    <div class="text-center">
         <div class="d-flex">
-            <div class="px-2">
-                Radius <SfNumericTextBox TValue="int?" Value="@DefaultOptions.NodeRadius" CssClass="shortInput"
-                                         Min=10 Max=100 Step=1 Format="###" @onchange="((e) => OnDefRadiusChange(e))"></SfNumericTextBox>
-            </div>
-            <div class="px-2">
-                Color <SfColorPicker Value="@DefaultOptions.NodeColor" ValueChange="OnDefNodeColorChange"></SfColorPicker>
-            </div>
-            <div class="px-2">
-                Label <SfColorPicker Value="@DefaultOptions.NodeLabelColor" ValueChange="OnDefNodeLabelColorChange"></SfColorPicker>
-            </div>
+            @if (ActiveNode == null)
+            {
+                <div class="px-2">
+                    Default:
+                </div>
+                <div class="px-1">
+                    Radius <SfNumericTextBox TValue="int?" Value="@DefaultOptions.NodeRadius" CssClass="shortInput"
+                                             Min=10 Max=100 Step=1 Format="###" @onchange="((e) => OnDefRadiusChange(e))"></SfNumericTextBox>
+                </div>
+                <div class="px-1">
+                    Color <SfColorPicker Value="@DefaultOptions.NodeColor" ValueChange="OnDefNodeColorChange"></SfColorPicker>
+                </div>
+                <div class="px-1">
+                    Label <SfColorPicker Value="@DefaultOptions.NodeLabelColor" ValueChange="OnDefNodeLabelColorChange"></SfColorPicker>
+                </div>
+            }
+            else
+            {
+                <div class="px-2">
+                    Selected:
+                </div>
+                <div class="px-1">
+                    Radius <SfNumericTextBox TValue="int?" Value="@ActiveNode.Radius" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput"
+                                             Placeholder="Radius" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
+                </div>
+                <div class="px-1">
+                    Color <SfColorPicker Value="@ActiveNode.NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
+                </div>
+                <div class="px-1">
+                    Label
+                    @if (ActiveNode.Label == null)
+                    {
+                        <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@(ActiveNode.NodeId.ToString())"></SfTextBox>
+                    }
+                    else
+                    {
+                        <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@ActiveNode.Label"></SfTextBox>
+                    }
+                    <SfColorPicker Value="@ActiveNode.LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                </div>
+            }
         </div>
     </div>
 </nav>
