--- a/GarphIt.web/Pages/NavBar.razor
+++ b/GarphIt.web/Pages/NavBar.razor
@@ -7,8 +7,8 @@
     </button>
     <div class="collapse navbar-collapse mx-0" id="navbarNav">
         <ul class="navbar-nav mx-0">
-            <li class="nav-item @NavElements[(int)NavChoice.File]" @onclick="(() => Click(NavChoice.File))">
-                <button type="button" class="btn shadow-none">File</button>
+            <li class="nav-item @NavElements[(int)NavChoice.Home]" @onclick="(() => Click(NavChoice.Home))">
+                <button type="button" class="btn shadow-none">Home</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.Insert]" @onclick="(() => Click(NavChoice.Insert))">
                 <button type="button" class="btn shadow-none">Insert</button>
